Add frontend and backend

--- a/turbo.json
+++ b/turbo.json
@@ -10,8 +10,8 @@
         "lint": {
             "dependsOn": ["^lint"]
         },
-        "check-types": {
-            "dependsOn": ["^check-types"]
+        "test": {
+            "dependsOn": ["^test"]
         },
         "dev": {
             "cache": false,
