--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "dev": "turbo run dev",
         "lint": "turbo run lint",
         "fmt": "prettier --config=.prettierrc --write .",
-        "test": "turbo run check-types"
+        "test": "turbo run test"
     },
     "repository": {
         "type": "git",
