--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -6,26 +6,34 @@
     "author": "xcfio",
     "license": "MIT",
     "scripts": {
-        "db": "drizzle-kit studio --port=7700",
+        "db": "drizzle-kit studio --port=4000",
+        "gen": "drizzle-kit generate",
         "dev": "tsx watch --no-warnings --env-file-if-exists=.env src/index.ts",
         "start": "tsx --env-file-if-exists=.env src/index.ts",
         "test": "tsc --noEmit"
     },
     "dependencies": {
+        "@fastify/cookie": "^11.0.2",
         "@fastify/cors": "^11.1.0",
         "@fastify/error": "^4.2.0",
+        "@fastify/jwt": "^10.0.0",
+        "@fastify/oauth2": "^8.1.2",
         "@fastify/rate-limit": "^10.3.0",
+        "@fastify/type-provider-typebox": "^5.2.0",
         "@sinclair/typebox": "^0.34.40",
-        "discord-api-types": "^0.38.21",
-        "drizzle-orm": "^0.44.4",
-        "fastify": "^5.4.0",
+        "drizzle-orm": "^0.44.5",
+        "fastify": "^5.5.0",
         "postgres": "^3.4.7",
-        "snowtransfer": "^0.15.0",
-        "uuid": "^11.1.0"
+        "socket.io": "^4.8.1",
+        "tsx": "^4.20.5",
+        "typescript": "^5.9.2",
+        "uploadthing": "^7.7.4",
+        "uuid": "^11.1.0",
+        "zod": "^4.1.5"
     },
     "devDependencies": {
-        "@types/node": "^24.0.10",
-        "@types/uuid": "^10.0.0",
+        "@types/node": "^24.3.0",
         "drizzle-kit": "^0.31.4"
     }
 }
+
