--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -23,6 +23,7 @@
         "@sinclair/typebox": "^0.34.40",
         "drizzle-orm": "^0.44.5",
         "fastify": "^5.5.0",
+        "fastify-socket.io": "^5.1.0",
         "postgres": "^3.4.7",
         "socket.io": "^4.8.1",
         "tsx": "^4.20.5",
@@ -36,4 +37,3 @@
         "drizzle-kit": "^0.31.4"
     }
 }
-
