--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -1,5 +1,19 @@
+# Config
 NODE_ENV="development"
 DATABASE_URI=""
-TOKEN=""
-CHANNEL=""
-SECRET=""
+
+# Secrets
+COOKIE_SECRET=""
+JWT_SECRET=""
+
+# Discord Auth
+DISCORD_CLIENT_ID=""
+DISCORD_CLIENT_SECRET=""
+
+# Github Auth
+GITHUB_CLIENT_ID=""
+GITHUB_CLIENT_SECRET=""
+         
+# Google Auth
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET="" 
