--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -17,8 +17,9 @@
         "@fastify/cors": "^11.1.0",
         "@fastify/error": "^4.2.0",
         "@fastify/jwt": "^10.0.0",
-        "@fastify/oauth2": "^8.1.2",
         "@fastify/rate-limit": "^10.3.0",
+        "@fastify/swagger": "^9.5.1",
+        "@fastify/swagger-ui": "^5.2.3",
         "@fastify/type-provider-typebox": "^5.2.0",
         "@sinclair/typebox": "^0.34.40",
         "drizzle-orm": "^0.44.5",
