--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "chat-app",
-    "author": "xcfio",
+    "author": "Omar Faruk (Aka. xcfio)",
     "homepage": "https://github.com/xcfio/chat-app#readme",
     "license": "MIT",
     "scripts": {
