--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -16,6 +16,7 @@
         "@tabler/icons-react": "^3.35.0",
         "@tailwindcss/postcss": "^4.1.13",
         "axios": "^1.12.2",
+        "lucide-react": "^0.544.0",
         "next": "^15.5.3",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
