--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -22,20 +22,20 @@
         "@fastify/error": "^4.2.0",
         "@fastify/jwt": "^10.0.0",
         "@fastify/rate-limit": "^10.3.0",
-        "@fastify/swagger": "^9.5.2",
+        "@fastify/swagger": "^9.6.1",
         "@fastify/swagger-ui": "^5.2.3",
-        "@fastify/type-provider-typebox": "^5.2.0",
-        "@sinclair/typebox": "^0.34.40",
+        "@fastify/type-provider-typebox": "^6.1.0",
+        "typebox": "^1.0.55",
         "drizzle-orm": "^0.44.7",
-        "fastify": "^5.6.1",
+        "fastify": "^5.6.2",
         "fastify-socket.io": "^5.1.0",
         "postgres": "^3.4.7",
         "socket.io": "^4.8.1",
-        "typescript": "^5.9.2",
+        "typescript": "^5.9.3",
         "uuid": "^13.0.0"
     },
     "devDependencies": {
-        "@types/node": "^24.10.0",
-        "drizzle-kit": "^0.31.5"
+        "@types/node": "^24.10.1",
+        "drizzle-kit": "^0.31.7"
     }
 }
